@@ -45,9 +45,7 @@
 					<onup condition="!Skin.HasSetting(KioskMode)">9010</onup>
 					<ondown>70</ondown>
 					<preloaditems>2</preloaditems>
-					<focusposition>4</focusposition>
-					<movement>3</movement>
-					<itemlayout width="168" height="357" condition="[Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)]">
+					<itemlayout width="168" height="357" condition="!Skin.HasSetting(infostrip.bigposters) + [Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)]">
 						<control type="image">
 							<description>Poster</description>
 							<posx>6</posx>
@@ -115,6 +113,47 @@
 							<visible>Skin.HasSetting(infostrip.backpanel)</visible>
 							<animation effect="fade" end="40" condition="true">Conditional</animation>
 						</control>
+					</itemlayout>
+					<itemlayout width="231" height="357" condition="Skin.HasSetting(infostrip.bigposters) + [Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)]">
+						<control type="image">
+							<description>Poster</description>
+							<posx>6</posx>
+							<posy>6</posy>
+							<width>219</width>
+							<height>326</height>
+							<texture background="true" diffuse="arctic/panel/wall.png">$VAR[WallPoster]</texture>
+							<aspectratio>stretch</aspectratio>
+							<colordiffuse>cfffffff</colordiffuse>
+						</control>
+						<control type="image">
+							<description>Border</description>
+							<posx>-4</posx>
+							<posy>-4</posy>
+							<width>239</width>
+							<height>346</height>
+							<texture border="25">arctic/common/border.png</texture>
+							<aspectratio>stretch</aspectratio>
+							<colordiffuse>Mod_Border_Fade</colordiffuse>
+						</control>  
+						<control type="image">
+							<posx>6</posx>
+							<posy>6</posy>
+							<width>50</width>
+							<height>50</height>
+							<texture diffuse="arctic/overlay/50.png">$VAR[arctic.watched]</texture>
+							<aspectratio scalediffuse="false" aligny="top" align="left">keep</aspectratio>
+						</control>
+						<control type="image">
+							<description>Poster</description>
+							<posx>6</posx>
+							<posy>6</posy>
+							<width>219</width>
+							<height>326</height>
+							<texture border="10">arctic/panel/wall.png</texture>
+							<aspectratio>stretch</aspectratio>
+							<colordiffuse>Mod_Cover_Fade</colordiffuse>
+						</control>
+
 					</itemlayout>
 					<itemlayout width="369" height="357" condition="[Container.Content(episodes)]">
 						<control type="image">
@@ -185,7 +224,7 @@
 							<animation effect="fade" end="40" condition="true">Conditional</animation>
 						</control>
 					</itemlayout>
-					<focusedlayout width="168" height="357" condition="[Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)]">
+					<focusedlayout width="168" height="357" condition="!Skin.HasSetting(infostrip.bigposters) + [Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)]">
 						<control type="group">
 							<animation effect="zoom" start="75" end="100" time="150" center="auto">Focus</animation>
 							<control type="image">
@@ -262,6 +301,58 @@
 								<font>Font-AlbumCover-Title</font>
 								<scroll>false</scroll>
 								<visible>Skin.HasSetting(infostrip.backpanel)</visible>
+							</control>
+						</control>
+					</focusedlayout>
+					<focusedlayout width="231" height="357" condition="Skin.HasSetting(infostrip.bigposters) + [Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)]">
+						<control type="group">
+							<animation effect="zoom" start="75" end="100" time="150" center="auto">Focus</animation>
+							<control type="image">
+								<description>Poster</description>
+								<posx>6</posx>
+								<posy>6</posy>
+								<width>219</width>
+								<height>326</height>
+								<texture background="true" diffuse="arctic/panel/wall.png">$VAR[WallPoster]</texture>
+								<aspectratio>stretch</aspectratio>
+							</control>
+							<control type="image">
+								<description>Border</description>
+								<posx>-4</posx>
+								<posy>-4</posy>
+								<width>239</width>
+								<height>346</height>
+								<texture border="52">arctic/common/border.png</texture>
+								<aspectratio>stretch</aspectratio>
+							</control> 
+							<control type="image">
+								<description>Border</description>
+								<posx>-4</posx>
+								<posy>-4</posy>
+								<width>239</width>
+								<height>346</height>
+								<texture border="52">arctic/common/border.png</texture>
+								<aspectratio>stretch</aspectratio>
+							</control> 
+							<control type="image">
+								<posx>6</posx>
+								<posy>6</posy>
+								<width>50</width>
+								<height>50</height>
+								<texture>$VAR[arctic.watched]</texture>
+								<aspectratio aligny="top" align="left">keep</aspectratio>
+								<texture diffuse="arctic/overlay/50.png">$VAR[arctic.watched]</texture>
+								<aspectratio scalediffuse="false" aligny="top" align="left">keep</aspectratio>
+							</control>
+							<control type="image">
+								<description>Border</description>
+								<posx>4</posx>
+								<posy>4</posy>
+								<width>223</width>
+								<height>330</height>
+								<texture border="25">arctic/common/border-glo-flat.png</texture>
+								<aspectratio>stretch</aspectratio>
+								<colordiffuse>Mod_Glow_Border</colordiffuse>
 							</control>
 						</control>
 					</focusedlayout>
